# otus-course-project

./: .env.example  Dockerfile  README.md  cert_expired.cer  cert_not_expired.cer  docker-compose.yml  index.html  key_expired.key  key_not_expired.key  pyproject.toml
app/: alembic.ini  crud.py  logging.json  main.py  migration.py  scheduler.py  tasks.py
app/alembic/: env.py
app/alembic/versions/: 2024_02_04_1620-96a790bdfe43_create_table_for_store_certificate_info.py  2024_02_12_1442-49c5b87953bc_create_table_for_store_certificat_info.py  2024_02_16_1752-bf4a5a126e68_store_timezone_info_from_uploaded_at_.py
app/config/: settings.py
app/db/: engine.py
app/models/: __init__.py  base.py  certificate.py
app/parser/: parse_x509.py
app/routers/: delete.py  upload.py  view.py
app/schemas/: certificate.py
scripts/: generate_example_files.py
templates/: base.html  upload.html  view.html  view_all.html
