[tool.poetry]
name = "graduation-project"
version = "0.1.0"
description = ""
authors = ["Eugeny Romanchenko <eromanchenko@assist.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
python-multipart = "^0.0.6"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
