[tool.poetry]
name = "graduation-project"
version = "0.1.0"
description = ""
authors = ["Eugeny Romanchenko <eromanchenko@assist.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
python-multipart = "^0.0.6"
python-magic = "^0.4.27"
puremagic = "^1.15"
cryptography = "^42.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
